--- a/MyShop.DataAccess.InMemory/MyShop.DataAccess.InMemory.csproj
+++ b/MyShop.DataAccess.InMemory/MyShop.DataAccess.InMemory.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="InMemoryRepository.cs" />
+    <Compile Include="ProductCategoryRepository.cs" />
     <Compile Include="ProductRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
